Finished boilerplate code

--- a/pollster/templates/polls/index.html
+++ b/pollster/templates/polls/index.html
@@ -4,12 +4,12 @@
 <div class="card mb-3">
 	<div class="card-body">
 		<p class="lead">{{ q.question_text }}</p>
-		<a
-			href="{% url 'polls:detail' q.id %}"
-			class="btn btn-primary btn-sm"
+		<a href="{% url 'polls:detail' q.id %}" class="btn btn-primary btn-sm"
 			>Vote Now</a
 		>
-		<a href="{% url 'polls:results' q.id %}" class="btn btn-secondary btn-sm">Results</a>
+		<a href="{% url 'polls:results' q.id %}" class="btn btn-secondary btn-sm"
+			>Results</a
+		>
 	</div>
 </div>
 {% endfor %} {% else %}
